<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".ui.UserDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:theme="@style/Theme.Material3.DayNight">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/primary"
            android:indeterminateTint="@color/white"
            android:paddingTop="100dp"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/primary"
            app:expandedTitleTextAppearance="@android:style/TextAppearance"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_marginTop="16dp"
                    app:civ_border_color="@color/white_dark"
                    app:civ_border_overlay="true"
                    app:civ_border_width="3dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tv_detail_name"
                    style="@style/TextView.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_profile"
                    tools:text="Muhammad Rafi"
                    tools:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_detail_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
                    tools:text="christian"
                    tools:textStyle="italic" />

                <ImageView
                    android:id="@+id/iv_location"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="0dp"
                    android:background="@drawable/ic_location"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/icon_location"
                    app:layout_constraintEnd_toStartOf="@id/tv_detail_location"
                    app:layout_constraintTop_toBottomOf="@id/tv_detail_username" />

                <TextView
                    android:id="@+id/tv_detail_location"
                    style="@style/TextView.Italic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/poppins_light_italic"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/iv_location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_username"
                    tools:text="Jakarta, Indonesia"
                    tools:textStyle="italic" />

                <TextView
                    android:id="@+id/tv_detail_followers"
                    style="@style/TextView.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/tv_detail_following"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_location"
                    tools:text="100 Followers"
                    tools:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_detail_following"
                    style="@style/TextView.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_detail_followers"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_location"
                    tools:text="98 Following"
                    tools:textStyle="bold" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/secondary"
            android:contentDescription="@string/following"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_following"
            app:tabGravity="fill"
            app:tabIndicatorColor="@color/white"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/white"
            app:tabTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/link"
        android:foregroundGravity="bottom"
        android:src="@drawable/ic_github"
        app:backgroundTint="@color/white"
        app:fabCustomSize="45dp"
        app:tint="@color/black" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/secondary"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>